feat: adds shopify package to test metrics

--- a/packages.yml
+++ b/packages.yml
@@ -1,2 +1,3 @@
 packages:
-  - git: https://github.com/CerebriumAI/dbt_github.git
+  - github: https://github.com/CerebriumAI/dbt_github.git
+  - shopify: https://github.com/CerebriumAI/dbt_shopify.git
